# proxy-convert

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
src/commands/: cli.rs  convert.rs  mod.rs  template.rs  validate.rs  version.rs
src/core/: config.rs  error.rs  logging.rs  mod.rs  source.rs
src/protocols/: detect.rs  mod.rs  subscription.rs
src/protocols/clash/: default_template.rs  dns.rs  mod.rs  proxy_group.rs  template_processor.rs
src/protocols/clash/proxy/: http.rs  mod.rs  shadowsocks.rs  shadowsocks_r.rs  snell.rs  socks5.rs  trojan.rs  vmess.rs
src/protocols/singbox/: certificate.rs  default_template.rs  dns.rs  endpoint.rs  experimental.rs  log.rs  mod.rs  ntp.rs  service.rs  template_processor.rs
src/protocols/singbox/common/: base.rs  multiplex.rs  tls.rs  transport.rs
src/protocols/singbox/inbound/: anytls.rs  base.rs  direct.rs  http.rs  hysteria.rs  hysteria2.rs  mixed.rs  mod.rs  naive.rs  redirect.rs  shadowsocks.rs  shadowtls.rs  socks.rs  tproxy.rs  trojan.rs  tuic.rs  tun.rs  vless.rs  vmess.rs
src/protocols/singbox/outbound/: anytls.rs  base.rs  direct.rs  dns.rs  http.rs  hysteria.rs  hysteria2.rs  mod.rs  naive.rs  selector.rs  shadowsocks.rs  shadowtls.rs  socks.rs  ssh.rs  tor.rs  trojan.rs  tuic.rs  urltest.rs  vless.rs  vmess.rs  wireguard.rs
src/protocols/singbox/route/: mod.rs  rule.rs  rule_set.rs
src/protocols/v2ray/: default_template.rs  mod.rs  template_processor.rs
src/utils/: error.rs  mod.rs
src/utils/source/: loader.rs  mod.rs  parser.rs
src/utils/template/: interpolation_parser.rs  mod.rs  template_engine.rs
tests/: convert_integration.rs
